chore(deps): add commitizen && standard-version

--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
-    "rollup": "^2.12.1"
+    "cz-conventional-changelog": "3.3.0",
+    "rollup": "^2.12.1",
+    "standard-version": "^9.1.0"
   },
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "test": "node test/test.js",
-    "pretest": "npm run build"
+    "pretest": "npm run build",
+    "release": "standard-version",
+    "commit": "git add . && cz"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
