--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "ms": "^2.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "cz-conventional-changelog": "3.3.0",
+    "husky": "^4.3.8",
     "rollup": "^2.12.1",
     "standard-version": "^9.1.0"
   },
@@ -28,6 +31,11 @@
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   }
 }
